src/tccParser.java
// Generated from tcc.g4 by ANTLR 4.5
        
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, POLE=27, ROBOT_O=28, ROBOT_P=29, ROBOT=30, ID=31, 
		DIG=32, COMMA=33, SUB=34, NUM=35, DP=36, AC=37, FC=38, OC=39, CC=40, AP=41, 
		FP=42, DPI=43, ADD=44, MTP=45, DIV=46, LT=47, GT=48, LEQ=49, GEQ=50, EE=51, 
		DIF=52, HAS=53, RARROW=54, AND=55, PV=56, WSPC=57;
	public static final int
		RULE_expr = 0, RULE_name = 1, RULE_body = 2, RULE_input = 3, RULE_parametersIn = 4, 
		RULE_pInput = 5, RULE_listIn = 6, RULE_output = 7, RULE_parametersOut = 8, 
		RULE_var = 9, RULE_listVar = 10, RULE_decl = 11, RULE_stts = 12, RULE_parametersStts = 13, 
		RULE_unknown = 14, RULE_init = 15, RULE_parametersInit = 16, RULE_rules = 17, 
		RULE_condition = 18, RULE_and = 19, RULE_action = 20, RULE_condIf = 21, 
		RULE_condIfElse = 22, RULE_condElse = 23, RULE_term = 24, RULE_emit = 25, 
		RULE_parameter = 26, RULE_up = 27, RULE_atr = 28, RULE_bool = 29, RULE_oprLflt = 30, 
		RULE_oprA = 31, RULE_listaA = 32, RULE_member = 33, RULE_operatorA = 34, 
		RULE_operatorL = 35, RULE_oprLbool = 36;
	public static final String[] ruleNames = {
		"expr", "name", "body", "input", "parametersIn", "pInput", "listIn", "output", 
		"parametersOut", "var", "listVar", "decl", "stts", "parametersStts", "unknown", 
		"init", "parametersInit", "rules", "condition", "and", "action", "condIf", 
		"condIfElse", "condElse", "term", "emit", "parameter", "up", "atr", "bool", 
		"oprLflt", "oprA", "listaA", "member", "operatorA", "operatorL", "oprLbool"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'module'", "'in'", "'ball'", "'Xline'", "'Tline'", "'Lline'", "'line'", 
		"'unknown'", "'out'", "'walk'", "'defend'", "'kick'", "'var'", "'float'", 
		"'boolean'", "'states'", "'attack'", "'defense'", "'goalkeeper'", "'initially'", 
		"'if'", "'else'", "'emit'", "'up'", "'true'", "'false'", null, null, null, 
		null, null, null, "','", "'-'", null, "':'", "'{'", "'}'", "'['", "']'", 
		"'('", "')'", "':='", "'+'", "'*'", "'/'", "'<'", "'>'", "'<='", "'>='", 
		"'=='", "'!='", "'#'", "'->'", "'&'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "POLE", "ROBOT_O", "ROBOT_P", "ROBOT", "ID", "DIG", 
		"COMMA", "SUB", "NUM", "DP", "AC", "FC", "OC", "CC", "AP", "FP", "DPI", 
		"ADD", "MTP", "DIV", "LT", "GT", "LEQ", "GEQ", "EE", "DIF", "HAS", "RARROW", 
		"AND", "PV", "WSPC"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tcc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	         ArrayList<String> states = new ArrayList<>();
	         ArrayList<String> input = new ArrayList<>();
	         ArrayList<String> output = new ArrayList<>();
	         ArrayList<String> var = new ArrayList<>();
	         ArrayList<String> bool = new ArrayList<>();
	         ArrayList<String> flt = new ArrayList<>();
		 ArrayList<String> in = new ArrayList<>();
	         int cont=0;
	         
	public tccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			name();
			setState(75);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tccParser.ID, 0); }
		public TerminalNode DP() { return getToken(tccParser.DP, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			match(ID);
			setState(79);
			match(DP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode AC() { return getToken(tccParser.AC, 0); }
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public SttsContext stts() {
			return getRuleContext(SttsContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public TerminalNode FC() { return getToken(tccParser.FC, 0); }
		public List<RulesContext> rules() {
			return getRuleContexts(RulesContext.class);
		}
		public RulesContext rules(int i) {
			return getRuleContext(RulesContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(AC);
			setState(82);
			input();
			setState(83);
			output();
			setState(84);
			var();
			setState(85);
			stts();
			setState(86);
			init();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << POLE) | (1L << ROBOT_O) | (1L << ROBOT_P) | (1L << ROBOT))) != 0)) {
				{
				{
				setState(87);
				rules();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(FC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode DP() { return getToken(tccParser.DP, 0); }
		public TerminalNode OC() { return getToken(tccParser.OC, 0); }
		public ParametersInContext parametersIn() {
			return getRuleContext(ParametersInContext.class,0);
		}
		public PInputContext pInput() {
			return getRuleContext(PInputContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__1);
			setState(96);
			match(DP);
			setState(97);
			match(OC);
			setState(98);
			parametersIn();
			setState(99);
			pInput();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersInContext extends ParserRuleContext {
		public TerminalNode POLE() { return getToken(tccParser.POLE, 0); }
		public TerminalNode ROBOT_O() { return getToken(tccParser.ROBOT_O, 0); }
		public TerminalNode ROBOT_P() { return getToken(tccParser.ROBOT_P, 0); }
		public TerminalNode ROBOT() { return getToken(tccParser.ROBOT, 0); }
		public ParametersInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametersIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterParametersIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitParametersIn(this);
		}
	}

	public final ParametersInContext parametersIn() throws RecognitionException {
		ParametersInContext _localctx = new ParametersInContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametersIn);
		int _la;
		try {
			setState(109);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(T__2);
				}
				break;
			case POLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(POLE);
				}
				break;
			case ROBOT_O:
			case ROBOT_P:
			case ROBOT:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ROBOT_O) | (1L << ROBOT_P) | (1L << ROBOT))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				match(T__4);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				match(T__5);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				match(T__6);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PInputContext extends ParserRuleContext {
		public Token a;
		public Token b;
		public TerminalNode AP() { return getToken(tccParser.AP, 0); }
		public TerminalNode FP() { return getToken(tccParser.FP, 0); }
		public ListInContext listIn() {
			return getRuleContext(ListInContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(tccParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tccParser.ID, i);
		}
		public PInputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pInput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterPInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitPInput(this);
		}
	}

	public final PInputContext pInput() throws RecognitionException {
		PInputContext _localctx = new PInputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pInput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(AP);
			setState(112);
			((PInputContext)_localctx).a = match(ID);
			setState(113);
			match(COMMA);
			setState(114);
			((PInputContext)_localctx).b = match(ID);
			setState(115);
			match(FP);
			setState(116);
			listIn();
			if(!var.contains((((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null))){
			            var.add((((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null)); in.add((((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null));}
			         else if(!in.contains((((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null)))
			            System.out.println("[Linha "+((PInputContext)_localctx).a.getLine()+" Coluna "+(((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getCharPositionInLine():0)+"] INPUT: Vari�vel '"+(((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null)+"' j� declarada.");
			         if(!var.contains((((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null))){
			            var.add((((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null)); in.add((((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null));}
			         else if(!in.contains((((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null)))
			            System.out.println("[Linha "+((PInputContext)_localctx).b.getLine()+" Coluna "+(((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getCharPositionInLine():0)+"] INPUT: Vari�vel '"+(((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null)+"' j� declarada.");
			         flt.add((((PInputContext)_localctx).a!=null?((PInputContext)_localctx).a.getText():null)); flt.add((((PInputContext)_localctx).b!=null?((PInputContext)_localctx).b.getText():null));
			         
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListInContext extends ParserRuleContext {
		public ParametersInContext parametersIn() {
			return getRuleContext(ParametersInContext.class,0);
		}
		public PInputContext pInput() {
			return getRuleContext(PInputContext.class,0);
		}
		public TerminalNode CC() { return getToken(tccParser.CC, 0); }
		public TerminalNode PV() { return getToken(tccParser.PV, 0); }
		public ListInContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listIn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterListIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitListIn(this);
		}
	}

	public final ListInContext listIn() throws RecognitionException {
		ListInContext _localctx = new ListInContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listIn);
		try {
			setState(125);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(COMMA);
				setState(120);
				parametersIn();
				setState(121);
				pInput();
				}
				break;
			case CC:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(CC);
				setState(124);
				match(PV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public TerminalNode DP() { return getToken(tccParser.DP, 0); }
		public TerminalNode OC() { return getToken(tccParser.OC, 0); }
		public ParametersOutContext parametersOut() {
			return getRuleContext(ParametersOutContext.class,0);
		}
		public TerminalNode CC() { return getToken(tccParser.CC, 0); }
		public TerminalNode PV() { return getToken(tccParser.PV, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_output);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__8);
			setState(128);
			match(DP);
			setState(129);
			match(OC);
			setState(130);
			parametersOut();
			setState(131);
			match(CC);
			setState(132);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersOutContext extends ParserRuleContext {
		public Token a;
		public Token b;
		public Token c;
		public List<TerminalNode> AP() { return getTokens(tccParser.AP); }
		public TerminalNode AP(int i) {
			return getToken(tccParser.AP, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(tccParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(tccParser.COMMA, i);
		}
		public List<TerminalNode> FP() { return getTokens(tccParser.FP); }
		public TerminalNode FP(int i) {
			return getToken(tccParser.FP, i);
		}
		public List<TerminalNode> ID() { return getTokens(tccParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tccParser.ID, i);
		}
		public ParametersOutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametersOut; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).enterParametersOut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tccListener ) ((tccListener)listener).exitParametersOut(this);
		}
	}
